# Congress-Prioritization

./: Discussions.md  README.md  README_WORKFLOW.md  app.py  main.py  pyproject.toml  requirements.txt
artifacts/Unstructured Response Formats/: rule_analysis_content_GPT4.1.txt  rule_analysis_content_Haiku4.5.txt
configuration/: config.py
data/test01_ASCO_2025_RevMed/: client_keywords.csv  planner.csv  rule_analysis.csv  rules.csv
data/test02_ERA_2025_Calliditas/: client_keywords.csv  custom_synonyms.csv  planner.csv  rules.csv
data/test03_NKF_2025_Ardelyx/: client_keywords.csv  rules.csv
data/test04_DDW_2025_Ardelyx/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test05_AACR_2025_GDH/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test06_ESMO_2025_JNJ_Lung/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test07_ESMO_2025_JNJ_CRC/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test08_ESMO_2025_JNJ_ST3/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test09_ESMO_2025_JNJ_Prostate/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test10_ASCO_GU_2025_JNJ_Bladder/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test11_ASCO_2025_JNJ_BCell/: client_keywords.csv  rule_analysis_result.json  rules.csv
data/test12_ASCO_2025_JNJ_Imbruvica/: client_keywords.csv  rule_analysis_result.json  rules.csv
docs/: Discussions.md  Obsv & Feedback.md  Prioritization Workflow.docx  README.md  Rule Parsing Schema.json  Rule Text Analysis.md
(+105 files in other folders)
